--- a/Demos/demo-3.2/src/main/resources/templates/hello/response.html
+++ b/Demos/demo-3.2/src/main/resources/templates/hello/response.html
@@ -5,10 +5,7 @@
 	<title>Hello World</title>
 </head>
 <body>
-	<h1>Hello World</h1>
-	<form method="post" action="/hello">
-		Enter: <input type="text" name="text1" />
-		<input type="submit" value="click" />
-	</form>
+	<h1>Hello Response</h1>
+	<p th:text="${sample}"></p>
 </body>
 </html>
