--- a/Demos/demo-3.3/src/main/resources/templates/hello.html
+++ b/Demos/demo-3.3/src/main/resources/templates/hello.html
@@ -8,7 +8,12 @@
 	<h1>Hello World</h1>
 	<form method="post" action="/hello">
 		Enter: <input type="text" name="text1" />
-		<input type="submit" value="click" />
+		<input type="submit" value="Click" />
+	</form>
+	<br/>
+	<form method="post" action="/hello/db">
+		Employee ID: <input type="text" name="text2" th:value="${text2_value}" />
+		<input type="submit" value="Click" />
 	</form>
 </body>
 </html>
